k8s/quote.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    run: quote
  name: quote
spec:
  replicas: 1
  selector:
    matchLabels:
      run: quote
  template:
    metadata:
      labels:
        run: quote
      annotations:
        bleemeo.stack: quote
    spec:
      containers:
      - image: bleemeolabs/quote:latest
        imagePullPolicy: IfNotPresent
        name: quote
---
apiVersion: v1
kind: Service
metadata:
  labels:
    run: quote
  name: quote
spec:
  selector:
    run: quote
  ports:
  - port: 8181
    protocol: TCP
    targetPort: 8181
